* Fix issue where struggle bosses would not be invulnerable in fights with invulnerable bosses (IE Hades I or other Struggle bosses)
* Updated Hydra Head AI so when executing the finisher RC, you are rubberbanded back to where Sora started the RC, instead of a random location in the arena

4.0.3

Fixes
* Made improvements to Revenge Limit Rando to only randomize the revenge limit of enemies/bosses that specifically have a Karma limit set in their AI.
* Issue of infinite loading on entering Hades I fight has been fixed.
* Undead Pirate (Rifle) should now be damageable when other enemies are randomized.
* Atlantica cutscenes are no longer removed when cutscene removal is turned on.
* The Jafar spawn locations have been fixed so that bosses walk on invisible ground instead of falling infinitely.
* Fixed issue with Timeless River variant of Minute Bombs not having explosion properly disabled
* When HP Scaling is turned off, Sephiroth and Prison Keepers base HP is set to 1878 in order to not crash when viewing with Scan on a high battle level

New things
* Forced variations are possible, so in some locations Pete will always be the cups version of Pete, due to the Timeless River version not working in that location.
* Misc bosses option has been removed, and MCP/Shadow Stalker/Oogie boogie have been removed from the pool completely, and there are no plans to ever randomize these "gimmick/minigame" bosses.
* Storm Rider has been temporarily removed from the pool, until the proper AI edits can be made.
* More locations option has been added, to allow placing bosses in locations that are deemed tedious/unfair for whatever reason, or that have softlocks which can be avoided with skillful play (IE Sephiroth as a Lord replacement falls in this category).
* The OC Demyx fight has been added as a source location when "Wild" mode is on.